--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,15 +5,14 @@ homepage: https://amity.co
 documentation: https://docs.amity.co/social/flutter-beta
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
-  flutter: ">=2.5.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   collection: ^1.17.0
   get_it: ^7.2.0
-  dio: ^4.0.6
+  dio: ^5.2.1+1
   hive_flutter: ^1.1.0
   hive: ^2.2.1
   path_provider: ^2.0.10
