--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,32 +10,31 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.17.0
-  get_it: ^7.2.0
+  collection: 1.17.1
+  get_it: ^7.6.0
   dio: ^5.2.1+1
   hive_flutter: ^1.1.0
-  hive: ^2.2.1
-  path_provider: ^2.0.10
-  mqtt_client: ^9.7.4
-  http: ^0.13.4
-  uuid: ^3.0.6
-  socket_io_client: ^1.0.2
-  fixnum: ^1.0.1
+  hive: ^2.2.3
+  path_provider: ^2.0.15
+  mqtt_client: ^10.0.0
+  http: ^1.1.0
+  uuid: ^3.0.7
+  socket_io_client: ^2.0.2
+  fixnum: ^1.1.0
   byte_util: ^3.0.0
   freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
-  build_runner: ^2.1.11
+  flutter_lints: ^2.0.2
+  build_runner: ^2.4.6
   hive_generator: ^2.0.0
-  test: ^1.21.1
-  lints: ^2.0.0
-  flutter_dotenv: ^5.0.2
+  lints: ^2.1.1
+  flutter_dotenv: ^5.1.0
   hive_test: ^1.0.1
   mocktail: ^0.3.0
-  freezed: ^2.3.2
+  freezed: ^2.3.5
 
 assets:
   - .env
