--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,30 +12,30 @@ dependencies:
   flutter:
     sdk: flutter
   byte_util: ^3.0.0
-  collection: 1.17.1
-  dio: ^5.2.1+1
+  collection: ^1.18.0
+  dio: ^5.4.0
   fixnum: ^1.1.0
-  freezed_annotation: ^2.2.0
-  get_it: ^7.6.0
+  freezed_annotation: ^2.4.1
+  get_it: ^7.6.6
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  mqtt_client: ^10.0.0
-  path_provider: ^2.0.15
-  socket_io_client: ^2.0.2
-  uuid: ^3.0.7
+  mqtt_client: ^10.0.1
+  path_provider: ^2.1.2
+  socket_io_client: ^2.0.3+1
+  uuid: ^4.3.3
   amity_sdk_api: ^0.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.6
+  build_runner: ^2.4.8
   flutter_dotenv: ^5.1.0
-  flutter_lints: ^2.0.2
-  freezed: ^2.3.5
-  hive_generator: ^2.0.0
+  flutter_lints: ^3.0.1
+  freezed: ^2.4.6
+  hive_generator: ^2.0.1
   hive_test: ^1.0.1
-  lints: ^2.1.1
-  mocktail: ^0.3.0
+  lints: ^3.0.0
+  mocktail: ^1.0.2
 
 assets:
   - .env
